测试透视表api

--- a/pandas-pivot.ipynb
+++ b/pandas-pivot.ipynb
@@ -11,7 +11,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dt,time,value1,value2,value3\r\n",
+      "20190312,1,1,2,3\r\n",
+      "20190312,2,1,2,3\r\n",
+      "20190312,3,1,2,3\r\n",
+      "20190312,4,1,2,3\r\n",
+      "20190312,5,1,2,3\r\n",
+      "20190312,6,1,2,3\r\n",
+      "20190313,1,13,25,38\r\n",
+      "20190313,2,13,25,38\r\n",
+      "20190313,3,13,25,38\r\n",
+      "20190313,4,13,25,38\r\n",
+      "20190313,5,13,25,38\r\n",
+      "20190313,6,13,25,38\r\n",
+      "20190314,1,14,26,37\r\n",
+      "20190314,2,14,26,37\r\n",
+      "20190314,3,14,26,37\r\n",
+      "20190314,4,14,26,37\r\n",
+      "20190314,5,14,26,37\r\n",
+      "20190314,6,14,26,37"
+     ]
+    }
+   ],
+   "source": [
+    "cat aaa.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = df.pivot_table(index=['time'],columns=['dt'],values=['value1','value2','value3']).reorder_levels([1,0], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,22 +91,22 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"3\" halign=\"left\">value1</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">value2</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">value3</th>\n",
+       "      <th>dt</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">20190312</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">20190313</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">20190314</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>dt</th>\n",
-       "      <th>20190312</th>\n",
-       "      <th>20190313</th>\n",
-       "      <th>20190314</th>\n",
-       "      <th>20190312</th>\n",
-       "      <th>20190313</th>\n",
-       "      <th>20190314</th>\n",
-       "      <th>20190312</th>\n",
-       "      <th>20190313</th>\n",
-       "      <th>20190314</th>\n",
+       "      <th></th>\n",
+       "      <th>value1</th>\n",
+       "      <th>value2</th>\n",
+       "      <th>value3</th>\n",
+       "      <th>value1</th>\n",
+       "      <th>value2</th>\n",
+       "      <th>value3</th>\n",
+       "      <th>value1</th>\n",
+       "      <th>value2</th>\n",
+       "      <th>value3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time</th>\n",
@@ -81,145 +125,99 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>38</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       value1                     value2                     value3           \\\n",
-       "dt   20190312 20190313 20190314 20190312 20190313 20190314 20190312 20190313   \n",
-       "time                                                                           \n",
-       "1           1        1        1        2        2        2        3        3   \n",
-       "2           1        1        1        2        2        2        3        3   \n",
-       "3           1        1        1        2        2        2        3        3   \n",
-       "4           1        1        1        2        2        2        3        3   \n",
-       "5           1        1        1        2        2        2        3        3   \n",
-       "6           1        1        1        2        2        2        3        3   \n",
-       "\n",
-       "               \n",
-       "dt   20190314  \n",
-       "time           \n",
-       "1           3  \n",
-       "2           3  \n",
-       "3           3  \n",
-       "4           3  \n",
-       "5           3  \n",
-       "6           3  "
+       "dt   20190312               20190313               20190314              \n",
+       "       value1 value2 value3   value1 value2 value3   value1 value2 value3\n",
+       "time                                                                     \n",
+       "1           1      2      3       13     25     38       14     26     37\n",
+       "2           1      2      3       13     25     38       14     26     37\n",
+       "3           1      2      3       13     25     38       14     26     37\n",
+       "4           1      2      3       13     25     38       14     26     37\n",
+       "5           1      2      3       13     25     38       14     26     37\n",
+       "6           1      2      3       13     25     38       14     26     37"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.pivot_table(index=['time'],columns=['dt'],values=['value1','value2','value3'])"
+    "p.iloc[:,[0,3,6,1,4,7,2,5,8]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultiIndex(levels=[[20190312, 20190313, 20190314], ['value1', 'value2', 'value3']],\n",
-       "           labels=[[0, 1, 2, 0, 1, 2, 0, 1, 2], [0, 0, 0, 1, 1, 1, 2, 2, 2]],\n",
-       "           names=['dt', None])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
