测试透视表api

--- a/pandas-pivot.ipynb
+++ b/pandas-pivot.ipynb
@@ -59,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = df.pivot_table(index=['time'],columns=['dt'],values=['value1','value2','value3']).reorder_levels([1,0], axis=1)"
+    "p = df.pivot_table(index=['time'],columns=['dt'],values=['value1','value2','value3'])\\\n",
+    "    .reorder_levels([1,0], axis=1)"
    ]
   },
   {
@@ -593,7 +594,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -604,5 +605,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
